streamlining some text

--- a/_code/_teaser/index.html
+++ b/_code/_teaser/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="m-footer">
-      <p>Questions? Email <a href="mailto:james@findfranc.com" target="_blank" title="contact the creators of the app">james@findfranc.com</a>.</p>
+      <p>Questions? <a href="mailto:james@findfranc.com" target="_blank" title="contact the creators of the app">james@findfranc.com</a></p>
       
     </div>
 
