Create search box and back button

--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -12,9 +12,9 @@
     <a href="#">Friends in the area</a>
     <a href="#">Find friends</a>   
   </div>
-  <!-- <div id="search">
+  <div id="search">
     <a class="back"></a>
     <input type="text" placeholder="Search..." />
-  </div> -->
+  </div>
 </body>
 </html>
