--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -16,5 +16,48 @@
     <a class="back"></a>
     <input type="text" placeholder="Search..." />
   </div>
+  <ul id="friends" class="list">
+    <li class="invite">
+      Tell a friend about franc...
+      <span class="add"></span>
+    </li>
+    <li>
+      <img src="" alt="" class="icon-small" />
+      <span>jackie0912@yahoo.com</span>
+      <a class="btn-hollow">Find</span>
+    </li>
+    <li>
+      <img src="" alt="" class="icon-small" />
+      <span>jack.in.the.box@gmail.com</span>
+      <span class="status pending">Pending</span>
+    </li>
+    <li class="pending">
+      <img src="" alt="" class="icon-small" />
+      <span>Jackolyn Bridgeport</span>
+      <span class="status pending">Pending...</span>
+    </li>
+    <li>
+      <img src="" alt="" class="icon-small" />
+      <span>Jackson Campbell</span>
+      <a class="btn-hollow">Find</span>
+    </li>
+    <li>
+      <img src="" alt="" class="icon-small" />
+      <span>Jason Fredrickson</span>
+      <span class="status pending">Pending...</span>
+    </li>
+    <li>
+      <img src="" alt="" class="icon-small" />
+      <span>Jassica Kingston</span>
+      <span class="status pending">Pending...</span>
+    </li>
+    <li>
+      <img src="" alt="" class="icon-small" />
+      <span>jimi.hendrix@gmail.com</span>
+      <span class="status approved"></span>
+    </li>
+  </ul>
+  <div id="area"></div>
+  <div id="notifications"></div>
 </body>
 </html>
