--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -18,42 +18,42 @@
   </div>
   <ul id="friends" class="list">
     <li class="invite">
-      Tell a friend about franc...
+      <span>Tell a friend about franc...</span>
       <span class="add"></span>
     </li>
     <li>
-      <img src="" alt="" class="icon-small" />
-      <span>jackie0912@yahoo.com</span>
-      <a class="btn-hollow">Find</span>
+      <span class="profile-img-small no-image">Jw</span>
+      <span class="name">jackie0912@yahoo.com</span>
+      <a href="#" class="btn secondary">Find</a>
     </li>
     <li>
-      <img src="" alt="" class="icon-small" />
-      <span>jack.in.the.box@gmail.com</span>
+      <img src="_img/profile-image-1.png" alt="" class="profile-img-small" />
+      <span class="name">jack.in.the.box@gmail.com</span>
       <span class="status pending">Pending</span>
     </li>
     <li class="pending">
-      <img src="" alt="" class="icon-small" />
-      <span>Jackolyn Bridgeport</span>
+      <img src="_img/profile-image-2.png" alt="" class="profile-img-small" />
+      <span class="name">Jackolyn Bridgeport</span>
       <span class="status pending">Pending...</span>
     </li>
     <li>
-      <img src="" alt="" class="icon-small" />
-      <span>Jackson Campbell</span>
-      <a class="btn-hollow">Find</span>
+      <span class="profile-img-small no-image">Jc</span>
+      <span class="name">Jackson Campbell</span>
+      <a href="#" class="btn secondary">Find</a>
     </li>
     <li>
-      <img src="" alt="" class="icon-small" />
-      <span>Jason Fredrickson</span>
+      <span class="profile-img-small no-image">Jf</span>
+      <span class="name">Jason Fredrickson</span>
       <span class="status pending">Pending...</span>
     </li>
     <li>
-      <img src="" alt="" class="icon-small" />
-      <span>Jassica Kingston</span>
+      <span class="profile-img-small no-image">Jk</span>
+      <span class="name">Jassica Kingston</span>
       <span class="status pending">Pending...</span>
     </li>
     <li>
-      <img src="" alt="" class="icon-small" />
-      <span>jimi.hendrix@gmail.com</span>
+      <span class="profile-img-small no-image">Jh</span>
+      <span class="name">jimi.hendrix@gmail.com</span>
       <span class="status approved"></span>
     </li>
   </ul>
