Finish Notification list

--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -23,38 +23,68 @@
     </li>
     <li>
       <span class="profile-img-small no-image">Jw</span>
-      <span class="name">jackie0912@yahoo.com</span>
+      <span class="description">jackie0912@yahoo.com</span>
       <a href="#" class="btn secondary">Find</a>
     </li>
     <li>
       <img src="_img/profile-image-1.png" alt="" class="profile-img-small" />
-      <span class="name">jack.in.the.box@gmail.com</span>
+      <span class="description">jack.in.the.box@gmail.com</span>
       <span class="status pending">Pending</span>
     </li>
     <li class="pending">
       <img src="_img/profile-image-2.png" alt="" class="profile-img-small" />
-      <span class="name">Jackolyn Bridgeport</span>
+      <span class="description">Jackolyn Bridgeport</span>
       <span class="status pending">Pending...</span>
     </li>
     <li>
       <span class="profile-img-small no-image">Jc</span>
-      <span class="name">Jackson Campbell</span>
+      <span class="description">Jackson Campbell</span>
       <a href="#" class="btn secondary">Find</a>
     </li>
     <li>
       <span class="profile-img-small no-image">Jf</span>
-      <span class="name">Jason Fredrickson</span>
+      <span class="description">Jason Fredrickson</span>
       <span class="status pending">Pending...</span>
     </li>
     <li>
       <span class="profile-img-small no-image">Jk</span>
-      <span class="name">Jassica Kingston</span>
+      <span class="description">Jassica Kingston</span>
       <span class="status pending">Pending...</span>
     </li>
     <li>
       <span class="profile-img-small no-image">Jh</span>
-      <span class="name">jimi.hendrix@gmail.com</span>
+      <span class="description">jimi.hendrix@gmail.com</span>
       <span class="status approved"></span>
+    </li>
+  </ul>
+  <ul id="notifications" class="list">
+    <li>
+      <span class="profile-img-small no-image">Gc</span>
+      <span class="description">George Catastrope wants to find you...</span>
+      <a href="#" class="btn secondary">Yes, find me</a>
+      <a href="#" class="btn tertiary">Later</a>
+    </li>
+    <li>
+      <img src="_img/profile-image-1.png" alt="" class="profile-img-small" />
+      <span class="description">J. Fredricson want you to stay put...</span>
+      <a href="#" class="btn secondary">Yes, find me</a>
+      <a href="#" class="btn tertiary">Later</a>
+    </li>
+    <li>
+      <span class="profile-img-small no-image">Hz</span>
+      <span class="description">H. Zukes wants to see you...</span>
+      <a href="#" class="btn secondary">Go visible</a>
+      <a href="#" class="btn tertiary">Later</a>
+    </li>
+    <li>
+      <span class="profile-img-small no-image">Cs</span>
+      <span class="description">C. Strongbow will stay put!</span>
+      <span class="status approved"></span>
+    </li>
+    <li>
+      <img src="_img/profile-image-2.png" alt="" class="profile-img-small" />
+      <span class="description">J. Bridgeport can't stay put.</span>
+      <span class="status alert"></span>
     </li>
   </ul>
   <div id="area"></div>
