Add map and html5 geolocation for desktop testing purposes

--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <link href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="_css/_style.css" />
   <title>Document</title>
 </head>
@@ -106,5 +108,9 @@
   </ul>
   <div id="area"></div>
   <div id="notifications"></div>
+
+  <script type="text/javascript" src="_lib/jquery-2.1.0.min.js"></script>
+  <script type="text/javascript" src="_js/storage/ls-store.js"></script>
+  <script type="text/javascript" src="_js/main.js"></script>
 </body>
 </html>
