adding skrollr for parallaxing and adding _reset.scss

--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -102,7 +102,7 @@ helps you easily find and meet up with friends." />
 
       <small>&copy;2013 notch llc, all rights reserved. franc is a notch creation.</small>
     </footer>
-
+    <script src="_assets/scripts/skrollr.min.js"></script>
   </body>
 </html>
 
