placing the new images and using a img tag

--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -74,7 +74,7 @@ helps you easily find and meet up with friends." />
           <h2>Where is everyone?</h2>
           <p>You&rsquo;ll always know where your friends are at shows or festivals using <span class="franc-text">franc&rsquo;s</span> map.</p>
         </div>
-        <div id="map-sh" class="image--screenshot"></div>
+        <img src="_assets/images/use-the-map@2x.png" id="map-sh" class="image--screenshot"/>
       </div>
       <div id="marker-1" class="image"></div>
       <div id="marker-2" class="image"></div>
@@ -89,7 +89,7 @@ helps you easily find and meet up with friends." />
           <h2>Want to meet up with someone?</h2>
           <p>It&rsquo;s easy to meet up with someone using <span class="franc-text">franc</span>. Just ask them to “stay put” and use the map to meet up so you all can rock out!</p>
         </div>
-        <div id="stay-put-sh" class="image--screenshot"></div>
+        <img src="_assets/images/ask-for-a-stay-put@2x.png" id="stay-put-sh" class="image--screenshot"/>
       </div>
       <div id="met-up-group" class="image"></div>
     </div>
