adding demo.js to the static index.html

--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript" src="http://findfranc.com/demo/demo.js"></script>
   <link href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="_css/_style.css" />
   <title>Document</title>
