Add meta tags to prevent phone zooming. Change zoom level to 17

--- a/_code/_static/index.html
+++ b/_code/_static/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <meta name="viewport" content="width=device-width" />
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <link href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="_css/_style.css" />
@@ -25,11 +27,11 @@
   </div>
   <div id="map"></div>
   <div id="nav">
-    <a href="#">Notifications</a>
-    <a href="#">Friends in the area</a>
-    <a href="#">Find friends</a>   
+    <a href="#">Activity</a>
+    <a href="#">Local</a>
+    <a href="#">Add</a>   
   </div>
-  <section id="find-friends">
+<!--   <section id="find-friends">
     <div id="search">
       <a class="back"></a>
       <input type="text" placeholder="Search..." />
@@ -105,7 +107,7 @@
       <span class="description">J. Bridgeport can't stay put.</span>
       <span class="status alert"></span>
     </li>
-  </ul>
+  </ul> -->
   <div id="area"></div>
   <div id="notifications"></div>
 
